# pose2anim

./: Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
pose2anim/: __init__.py  cli.py  pipeline.py
pose2anim/export/: __init__.py  bvh_writer.py  fbx_exporter.py
pose2anim/pose2d/: __init__.py  yolo_estimator.py
pose2anim/pose3d/: __init__.py  _model_stub.py  d3dp_lifter.py
pose2anim/utils/: skeleton.py  visualization.py
scripts/: blender_retarget.py
tests/: test_pipeline.py
