[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pose2anim"
version = "0.1.0"
description = "Video to 3D animation pipeline using YOLO26 + D3DP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Martin Rončka", email = "mroncka@gmail.com"}
]
keywords = ["pose-estimation", "3d-animation", "yolo", "d3dp", "motion-capture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.3.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "transforms3d>=0.4.1",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0", "open3d>=0.17.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "mypy>=1.0"]

[project.scripts]
pose2anim = "pose2anim.cli:main"

[tool.setuptools.packages.find]
include = ["pose2anim*"]
